--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "node-geocoder": "^3.13.1",
     "request": "^2.74.0"
   }
 }
