--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "csv-parse": "^1.1.7",
     "express": "^4.14.0",
     "feedparser": "^1.1.4",
     "geocoder": "^0.2.2",
